update to error_prone_ant-2.3.1